--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,12 @@ h1 {
 h2 {
   font-size: 50px;
   color: red;
-  border-width: medium;
-}
+  padding-left: 20px;
+  }
 h3 {
   font-size: 50px;
   color: red;
+  padding-right: 200px;
 }
 .art{
   border-radius: 50%
@@ -31,3 +32,6 @@ h3 {
 .pro {
   float: right;
 }
+p{
+  padding-left: 20px;
+}(
